fixed footer coloring and ghost spacing on for sale

--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -1,16 +1,19 @@
 footer{
-	background-image: linear-gradient(rgba(0,0,0,0.20), rgba(0,0,0,0.20)), url(../../assets/headerImage.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.40), rgba(0,0,0,0.40)), url(../../assets/headerImage.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: bottom;
 	div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	height: 5vh;
-	width: 100%;
+	    display: flex;
+	    justify-content: space-between;
+	    align-items: center;
+		height: 5vh;
+		width: 100%;
+		h5{
+			color: $White;
+		}
 		a {
-			color: $Black;
+			color: $White;
 		}
 	}
 }
